<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2017 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <View
      android:id="@+id/scrim"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/material_grey_800"
      android:visibility="invisible"
      app:layout_behavior="@string/fab_transformation_scrim_behavior"/>

  <com.bottombar.navigation.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="16dp"
      android:src="@drawable/ic_add"/>

  <com.bottombar.navigation.material.transformation.TransformationChildLayout
      android:id="@+id/sheet"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="50dp"
      android:layout_gravity="center"
      android:visibility="invisible"
      app:layout_behavior="@string/fab_transformation_sheet_behavior"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
